# hpc-mirror

./: .gitignore  README.md  pyproject.toml
src/hpc_sync/: cli.py  config.py  rsync.py
